--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -226,7 +226,6 @@ basic:
             nani: 💥 Նանի
             cat: 🐱 Փիսո
             dog: 🐶 Շունիկ
-            cab: ​​🥷 Կաբ
             cock: 🐔 Աքաղաղիկ
             sad: 🎺 Տքսուր
             badumtss: 🥁 Բադումց
@@ -574,8 +573,9 @@ funds:
             🛂 Դու կարող ես փոխանցել նվիրատվությունը օգտագործելով հետևյալ հրամանները.
             #`/tosafe id#` - Հատկացնել նվիրատվությունը Safe-ին ըստ ID-ի (կամ մի քանի ID-ի, բաժանե՛լ ստորակետերով)
             #`/topaid id#` - Նշել նվիրատվությունը որպես վճարված ըստ ID-ի (գնացել է հավաքագրման նպատակին)
-            #`/tocab id#` - Հատկացնել նվիրատվությունը Cab-ին ըստ ID-ի
-            #`/tonick id#` - Հատկացնել նվիրատվությունը Kole-ին ըստ ID-ի
+            #`/tonick id#` - Հատկացնել նվիրատվությունը Kolya-ին ըստ ID-ի
+            #`/totina id#` - Հատկացնել նվիրատվությունը Tina-ին ըստ ID-ի
+            #`/tohimura id#` - Հատկացնել նվիրատվությունը Himura-ին ըստ ID-ի
             #`/tosafeall fund_name#` - Քո բոլոր նվիրատվությունները Safe-ին որոշակի հավաքագրումից
             #`/tosafeall#` - Քո բոլոր նվիրատվությունները Safe-ին (զգույշ)
             #`/transferdonation donation_id to username#` (td) - Փոխանցել նվիրատվությունը մեկ այլ հաշվապահի
