--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -227,7 +227,6 @@ basic:
             nani: 💥 Nani
             cat: 🐱 Cat
             dog: 🐶 Dog
-            cab: 🥷 Cab
             cock: 🐔 Cock
             sad: 🎺 Sad
             badumtss: 🥁 Badumtss
@@ -581,8 +580,9 @@ funds:
             🛂 Передать донат можно командами:
             #`/tosafe id#` - Отдельный донат Сейфу по id (можно несколько id через запятую)
             #`/topaid id#` - Отметить донат оплаченным по id (ушел на цель сбора)
-            #`/tocab id#` - Отдельный донат Кабу по id
             #`/tonick id#` - Отдельный донат Коле по id
+            #`/totina id#` - Отдельный донат Тине по id
+            #`/tohimura id#` - Отдельный донат Химуре по id
             #`/tosafeall fund_name#` - Все донаты в сейф с определенного сбора
             #`/transferdonation donation_id to username#` (td) - Передать донат другому бухгалтеру
         empty: 📂 На тебе ничего не числится
