--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -227,7 +227,6 @@ basic:
             nani: 💥 Nani
             cat: 🐱 Cat
             dog: 🐶 Dog
-            cab: 🥷 Cab
             cock: 🐔 Cock
             sad: 🎺 Sad
             badumtss: 🥁 Badumtss
@@ -581,8 +580,9 @@ funds:
             🛂 Передати донат можна командами:
             #`/tosafe id#` - Окремий донат Сейфу за id (можна декілька id через кому)
             #`/topaid id#` - Відмітити донат оплаченим за id (пішов на ціль збору)
-            #`/tocab id#` - Окремий донат Кабу за id
             #`/tonick id#` - Окремий донат Колі за id
+            #`/totina id#` - Окремий донат Тiне за id
+            #`/tohimura id#` - Окремий донат Хiмуре за id
             #`/tosafeall fund_name#` - Всі донати в сейф з певного збору
             #`/transferdonation donation_id to username#` (td) - Передати донат іншому бухгалтеру
         empty: 📂 На тобі нічого не числиться
