--- a/resources/locales/en/translation.yaml
+++ b/resources/locales/en/translation.yaml
@@ -227,7 +227,6 @@ basic:
             nani: 💥 Nani
             cat: 🐱 Cat
             dog: 🐶 Dog
-            cab: ​​🥷 Cab
             cock: 🐔 Cock
             sad: 🎺 Sad
             badumtss: 🥁 Badumtss
@@ -578,8 +577,9 @@ funds:
             🛂 You can transfer a donation using the following commands:
             #`/tosafe id#` - Separate donation to safe by id (or several ids, separated by commas)
             #`/topaid id#` - Mark the donation as paid by id (went to the fund purpose)
-            #`/tocab id#` - Separate donation to Cab by id
-            #`/tonick id#` - Separate donation to Kole by id
+            #`/tonick id#` - Separate donation to Kolya by id
+            #`/totina id#` - Separate donation to Tina by id
+            #`/tohimura id#` - Separate donation to Humira by id
             #`/tosafeall fund_name#` - All your donations to safe from a certain fund
             #`/tosafeall#` - All your donations to safe (carefully)
             #`/transferdonation donation_id to username#` (td) - Transfer donation to another accountant
