--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -259,7 +259,17 @@ admin:
             - Չաթի կեղծանուններ՝ {{chatsList}}
             - Ստանալ ընթացիկ չաթի ID-ն՝ /chatid
         nochat: Նշված չաթը չի գտնվել
-        success: Հաղորդագրությունը պատճենվել է {{target}}
+        success: ✅ Հաղորդագրությունը պատճենվել է {{target}}
+    save:
+        help: |
+            📷 Պահպանել հաղորդագրությունը, որին պատասխանում ես, բոտի չաթում
+
+            #`/save#`
+            #`/save message_id#`
+
+            👀 Այս գործողությունը կարող է լոգավորվել
+        success: Հաղորդագրությունը պահպանվել է
+        button: 💾 Ես էլ եմ ուզում
     custom:
         help: |
             ✉️ Ստեղծում է հատուկ հաղորդագրություն՝ պատկերներով և կոճակներով ընթացիկ չաթում։ Օրինակ.
