--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -262,6 +262,16 @@ admin:
             - Узнать id текущего чата: /chatid
         nochat: Specified chat not found
         success: Message was copied to {{target}}
+    save:
+        help: |
+            📷 Сохранить сообщение, на которое вы отвечаете, в чат с ботом
+
+            #`/save#`
+            #`/save message_id#`
+
+            👀 Это действие может быть залоггировано
+        success: Сообщение было сохранено
+        button: 💾 Я тоже хочу
     custom:
         help: |
             ✉️ С помощью этой команды можно сделать кастомное сообщение с изображением и кнопками. Пример:
