--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -262,6 +262,16 @@ admin:
             - Дізнатися id поточного чату: /chatid
         nochat: Вказаний чат не знайдено
         success: Повідомлення скопійовано до {{target}}
+    save:
+        help: |
+            📝 Зберегти повідомлення, на яке ви відповідаєте, в чат з ботом
+
+            #`/save#`
+            #`/save message_id#`
+
+            👀 Ця дія може бути залогована
+        success: Повідомлення збережено
+        button: 💾 Я теж хочу
     custom:
         help: |
             ✉️ За допомогою цієї команди можна зробити кастомне повідомлення із зображенням та кнопками. Приклад:
