enforce gender-neutral locale
fix for gender-non-neutral pronouns

--- a/resources/locales/en/translation.yaml
+++ b/resources/locales/en/translation.yaml
@@ -547,7 +547,7 @@ funds:
         success: |
             💸 [#`{{donationId}}#`] {{username}} donated {{value}} {{currency}} to #`{{fundName}}#`
         increased: |
-            💸 [#`{{donationId}}#`] {{username}} increased his donation to #`{{fundName}}#` by another {{value}} {{currency}}
+            💸 [#`{{donationId}}#`] {{username}} increased their donation to #`{{fundName}}#` by another {{value}} {{currency}}
         fail: ⚠️ Failed to add donation (maybe something is wrong with the currency or amount?)
         sponsorship: |
             {{emoji}} {{username}} now has {{tiername}} level
