--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -100,12 +100,26 @@ basic:
         {{coin.explorer}}-ում կամ նմանատիպ այլ ծառայությունում։
 
         🛍 Եթե ցանկանում ես նվիրաբերել ա՜յլ կերպ (օ՜, ոչ... թե՞, օ՜, այո), ապա սեղմիր /donate
-    donateCard: |
-        💌 Այս եղանակով նվիրաբերելու համար գրիր մեր հաշվապահներին, և նրանք կփոխանցեն քեզ ընթացիկ մանրամասները։ Այլապես, կարող ես համաձայնեցնել քեզ ավելի հարմար փոխանցման ժամանակ և վայր։
+    donateCash: |
+        💌 Այս կերպ նվիրատվություն կատարելու համար խնդրում ենք կապվել մեր հաշվապահների հետ: Նրանց հետ կարող եք պայմանավորվել փոխանցման ժամանակի և վայրի մասին:
 
         Ահա նրանք՝ {{accountantsList}}
 
-        🛍 Եթե ցանկանում ես նվիրաբերել բնեղենով կամ այլ կերպ, սեղմիր /donate
+        Նաև, կարող եք անանուն նվիրատվություն թողնել առաջին հարկում գտնվող տուփի մեջ:
+
+        🛍 Եթե ցանկանում եք նվիրատվություն կատարել բնամթերքով (օհ իմ) կամ այլ եղանակով - սեղմեք /donate
+    donateCard: |
+        💌 Դուք կարող եք գումար փոխանցել հետևյալ տվյալներով՝
+
+        🏢 Հաշվեհամարով՝ `{{accountNumber}}`, `{{accountHolder}}`
+
+        💳 Քարտի համարով՝ `{{cardNumber}}`,
+
+        Ձեր նվիրատվության չկորցնելու համար, խնդրում ենք կապվել մեր հաշվապահներից մեկի հետ: Նրանց հետ կարող եք ճշտել նաև նվիրատվության այլընտրանքային եղանակներ:
+
+        Ահա նրանք՝ {{accountantsList}}
+
+        🛍 Եթե ցանկանում եք նվիրատվություն կատարել բնամթերքով (օհ իմ) կամ այլ եղանակով - սեղմեք /donate
     donateEquipment: |
         🛠 Եթե տանը ունես ավելորդ 3D տպիչ, զոդման արդուկ կամ այլ օգտակար(!) սարքավորում, և պատրաստ ես այն նվիրաբերել space-ին (կամ կիսվել մեզ հետ ընդհանուր օգտագործման համար), ապա մենք ուրախ կլինենք այն ընդունել։
 
