--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -100,12 +100,26 @@ basic:
         в {{coin.explorer}} или аналогичном сервисе после
 
         🛍 Если хочешь задонатить натурой (ohh my) или другим способом - жми /donate
-    donateCard: |
-        💌 Для того, чтобы задонатить этим способом, напишите нашим бухгалтерам. Они подскажут вам текущие реквизиты или вы сможете договориться о времени и месте передачи.
+    donateCash: |
+        💌 Для того, чтобы задонатить этим способом, напишите нашим бухгалтерам. С ними вы сможете договориться о времени и месте передачи.
 
         Вот они: {{accountantsList}}
 
-        🛍 Если хочешь задонатить натурой или другим способом - жми /donate
+        Также, вы можете бросить анонимный донат в бокс на первом этаже.
+
+        🛍 Если хочешь задонатить натурой (ohh my) или другим способом - жми /donate
+    donateCard: |
+        💌 Вы можете перевести деньги на один из предложенных реквизитов:
+
+        🏢 По номеру счёта: #`{{accountNumber}}#`, #`{{accountHolder}}#`
+
+        💳 По номеру карты: #`{{cardNumber}}#`,
+
+        Чтобы ваш донат не потерялся, свяжитесь с одним из наших бухгалтеров. Также, вы можете уточнить с ними альтернативный способ донейта.
+
+        Вот они: {{accountantsList}}
+
+        🛍 Если хочешь задонатить натурой (ohh my) или другим способом - жми /donate
     donateEquipment: |
         🛠 Если у тебя дома завалялся лишний 3d принтер, паяльник или другое полезное(!) оборудование, и ты готов пожертвовать его спейсу (или расшарить для общего пользования у нас) мы будем очень благодарны принять его.
 
@@ -636,7 +650,7 @@ service:
         buttons:
             about: 📚 В чат бота
     setlanguage:
-        select: 🗣 Выбери язык своего общения с ботом
+        select: 🗣 \ъ своего общения с ботом
         success: ✅ Язык установлен как {{language}}
         error: ⚠️ Не удалось установить язык
         notsupported: |
