--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -100,12 +100,26 @@ basic:
         в {{coin.explorer}} або аналогічному сервісі після
 
         🛍 Якщо хочеш задонатити натурою (oh my!) або іншим способом - тисни /donate
-    donateCard: |
-        💌 Для того, щоб задонатити цим способом, напишіть нашим бухгалтерам. Вони підкажуть вам фактичні реквізити або ви зможете домовитися про час та місце передачі.
+    donateCash: |
+        💌 Щоб пожертвувати таким способом, зв'яжіться з нашими бухгалтерами. З ними ви зможете домовитись про час і місце передачі.
 
         Ось вони: {{accountantsList}}
 
-        🛍 Якщо хочеш задонатити натурою або іншим способом - тисни /donate
+        Також, ви можете залишити анонімний донат у коробці на першому поверсі.
+
+        🛍 Якщо ви хочете пожертвувати натурою (ой-ой) або іншим способом - натисніть /donate
+    donateCard: |
+        💌 Ви можете переказати гроші за одними з запропонованих реквізитів:
+
+        🏢 За номером рахунку: `{{accountNumber}}`, `{{accountHolder}}`
+
+        💳 За номером картки: `{{cardNumber}}`,
+
+        Щоб ваш донат не загубився, зв'яжіться з одним із наших бухгалтерів. Також, ви можете уточнити з ними альтернативний спосіб донату.
+
+        Ось вони: {{accountantsList}}
+
+        🛍 Якщо ви хочете пожертвувати натурою (ой-ой) або іншим способом - натисніть /donate
     donateEquipment: |
         🛠 Якщо у тебе вдома завалявся зайвий 3d принтер, паяльник або інше корисне(!) обладнання, і ти готовий пожертвувати його спейсу (або розшарити для загального користування у нас) ми будемо дуже вдячні прийняти його.
 
