--- a/resources/locales/hy/translation.yaml
+++ b/resources/locales/hy/translation.yaml
@@ -111,9 +111,9 @@ basic:
     donateCard: |
         💌 Դուք կարող եք գումար փոխանցել հետևյալ տվյալներով՝
 
-        🏢 Հաշվեհամարով՝ `{{accountNumber}}`, `{{accountHolder}}`
+        🏢 Հաշվեհամարով՝ #`{{accountNumber}}#`, #`{{accountHolder}}#`
 
-        💳 Քարտի համարով՝ `{{cardNumber}}`,
+        💳 Քարտի համարով՝ `{{cardNumber}}`
 
         Ձեր նվիրատվության չկորցնելու համար, խնդրում ենք կապվել մեր հաշվապահներից մեկի հետ: Նրանց հետ կարող եք ճշտել նաև նվիրատվության այլընտրանքային եղանակներ:
 
