--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -113,7 +113,7 @@ basic:
 
         🏢 По номеру счёта: #`{{accountNumber}}#`, #`{{accountHolder}}#`
 
-        💳 По номеру карты: #`{{cardNumber}}#`,
+        💳 По номеру карты: {{cardNumber}}
 
         Чтобы ваш донат не потерялся, свяжитесь с одним из наших бухгалтеров. Также, вы можете уточнить с ними альтернативный способ донейта.
 
