--- a/resources/locales/uk/translation.yaml
+++ b/resources/locales/uk/translation.yaml
@@ -111,9 +111,9 @@ basic:
     donateCard: |
         💌 Ви можете переказати гроші за одними з запропонованих реквізитів:
 
-        🏢 За номером рахунку: `{{accountNumber}}`, `{{accountHolder}}`
+        🏢 За номером рахунку: #`{{accountNumber}}#`, #`{{accountHolder}}#`
 
-        💳 За номером картки: `{{cardNumber}}`,
+        💳 За номером картки: `{{cardNumber}}`
 
         Щоб ваш донат не загубився, зв'яжіться з одним із наших бухгалтерів. Також, ви можете уточнити з ними альтернативний спосіб донату.
 
